--- a/task-a/index.html
+++ b/task-a/index.html
@@ -8,6 +8,7 @@ Date: 2025-09-08
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="refresh" content="0; url=/task-a/">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
