--- a/task-c/index.html
+++ b/task-c/index.html
@@ -14,8 +14,7 @@ Date: 2025-09-18
 
 <body>
     <h1>My Multimedia Showcase</h1>
-    <img src="https://live.staticflickr.com/65535/51801379370_fe47d0f7bf_b.jpg" alt="Citroën 2cv in Lapland, Finland"
-        class="cc-image">
+    <img src="https://live.staticflickr.com/65535/51801379370_fe47d0f7bf_b.jpg" alt="Citroën 2cv in Lapland, Finland">
 
     <p class="attribution">
         "<a rel="noopener noreferrer" href="https://www.flickr.com/photos/146832554@N06/51801379370">
@@ -24,12 +23,6 @@ Date: 2025-09-18
         is licensed under
         <a rel="noopener noreferrer" href="https://creativecommons.org/licenses/by-sa/2.0/?ref=openverse">
             CC BY-SA 2.0
-            <img src="https://mirrors.creativecommons.org/presskit/icons/cc.svg"
-                style="height: 1em; display: inline;" />
-            <img src="https://mirrors.creativecommons.org/presskit/icons/by.svg"
-                style="height: 1em; display: inline;" />
-            <img src="https://mirrors.creativecommons.org/presskit/icons/sa.svg"
-                style="height: 1em; display: inline;" />
         </a>.
     </p>
     <br>
