--- a/task-e/index.html
+++ b/task-e/index.html
@@ -8,7 +8,7 @@ Date: 2025-10-23
 <head>
     <meta charset="UTF-8">
     <title>Weekly Timetable</title>
-    <link rel="stylesheet" href="task-e/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -41,7 +41,7 @@ Date: 2025-10-23
                 </thead>
                 <tbody>
                     <tr>
-                        <td>Course name A</td>
+                        <td>Marketing Research</td>
                         <td>&#9989;</td>
                         <td>&#9989;</td>
                         <td>&#10060;</td>
@@ -49,20 +49,20 @@ Date: 2025-10-23
                         <td>&#9989;</td>
                     </tr>
                     <tr>
-                        <td>Course name B</td>
+                        <td>Basic Finnish 2</td>
                         <td>&#9989;</td>
-                        <td>&#9989;</td>
+                        <td>&#10060;</td>
                         <td>&#10060;</td>
                         <td>&#10060;</td>
                         <td>&#9989;</td>
                     </tr>
                     <tr>
-                        <td>Course Basics of web development</td>
+                        <td>Basics of web development</td>
                         <td>&#9989;</td>
                         <td>&#9989;</td>
                         <td>&#10060;</td>
                         <td>&#10060;</td>
-                        <td>&#9989;</td>
+                        <td>&#10060;</td>
                     </tr>
 
                 </tbody>
