--- a/task-e/index.html
+++ b/task-e/index.html
@@ -31,7 +31,7 @@ Date: 2025-10-23
             <table class="table">
                 <thead>
                     <tr>
-                        <th>Course</th>
+                        <th style="background: #273e73; color: #fff; position: sticky; top: 12px;">Course</th>
                         <th>Mon</th>
                         <th>Tue</th>
                         <th>Wed</th>
