--- a/task-I/index.html
+++ b/task-I/index.html
@@ -38,7 +38,7 @@
                     keys.<br></span>
                 Just you and the open road — ready when you are.
             </h2>
-            <div class="section">
+            <div class="section" style="font-size: 16px">
                 <div class="step">
                     <h3>Choose</h3>
                     <p>Select your perfect car for any trip — from daily drives to weekend escapes.</p>
