--- a/task-a/index.html
+++ b/task-a/index.html
@@ -1,23 +1,12 @@
-<!--
-Author: Wanjia Liang
-Date: 2025-09-08
--->
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
 
-<body>
-    <h1>Hello Web</h1>
-    <p>This is the content of Task A.</p>
-    <a href="https://github.com/vheikkiniemi/BasicsOfWebDevelopment2025S/blob/main/Assignments/Task-A.md">See the
-        assignment at this link</a>
-
-</body>
+<form oninput="sum.value=parseInt(a.value)+parseInt(b.value)">
+    <input type="number" name="a" value="5"> +
+    <input type="number" name="b" value="3"> =
+    <output name="sum">8</output>
+</form>
+<input type="hidden" name="csrf_token" value="xyz123">
 
 </html>
