--- a/task-k/Landing.html
+++ b/task-k/Landing.html
@@ -15,8 +15,8 @@
             <img src="logo.png" alt="OnWheel Logo">
         </div>
         <nav>
-            <a href="#">Home</a>
-            <a href="#">Cars</a>
+            <a href="Landing.html">Home</a>
+            <a href="Catalogue.html">Cars</a>
             <a href="#"><img src="globe_11086349.png" alt="Globe icon"
                     style="width: 1rem;height:auto;margin-bottom: -0.1rem;"> En|€</a>
             <a href="#">Support</a>
@@ -27,7 +27,7 @@
         <section class="hero">
             <h1>Freedom on Wheels</h1>
             <p>I am here. Drive me.</p>
-            <button>Book Now</button>
+            <a href="Catalogue.html" class="btn">Book Now</a>
         </section>
 
         <section class="introduction">
@@ -84,11 +84,11 @@
                 <h3>Download OnWheel App</h3>
 
                 <a href="#">
-                    <img src="Andriod icon.png" alt="Android download" />
+                    <img src="Andriod-icon.png" alt="Android download" />
                 </a>
 
                 <a href="#">
-                    <img src="Apple icon.png" alt="Apple download" />
+                    <img src="Apple-icon.png" alt="Apple download" />
                 </a>
             </section>
 
