--- a/task-k/Catalogue.html
+++ b/task-k/Catalogue.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>OnWheel - Freedom on Wheels</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="Cataloguestyles.css" />
 </head>
 
 <body>
@@ -15,8 +15,8 @@
             <img src="logo.png" alt="OnWheel Logo">
         </div>
         <nav>
-            <a href="Home.html">Home</a>
-            <a href="index.html">Cars</a>
+            <a href="Landing.html">Home</a>
+            <a href="Catalogue.html">Cars</a>
             <a href="#"><img src="globe_11086349.png" alt="Globe icon"
                     style="width: 1rem;height:auto;margin-bottom: -0.1rem;"> En|€</a>
             <a href="#">Support</a>
