--- a/task-k/Catalogue.html
+++ b/task-k/Catalogue.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>OnWheel - Freedom on Wheels</title>
     <link rel="stylesheet" href="Cataloguestyles.css" />
+    <script src="rent.js" defer></script>
 </head>
 
 <body>
@@ -54,7 +55,7 @@
                 <h3>Toyota Corolla</h3>
                 <p>Comfortable and fuel-efficient sedan.</p>
                 <p>Price: €45/day</p>
-                <button>Rent Now</button>
+                <button id="selectedCar">Rent Now</button>
             </div>
 
             <div class="carCard">
