--- a/task-k/index.html
+++ b/task-k/index.html
@@ -51,10 +51,10 @@
                     <label>Return Date: <input type="date" id="returnDate" name="returnDate" required></label>
                     <br>
                     <label>Return Location: <select id="returnLocation" name="returnLocation" required>
-                            <option required>Helsinki Airport</option>
-                            <option required>Oulu Train Station</option>
-                            <option required>Helsinki Train Station</option>
-                            <option required>Tampere Train Station</option>
+                            <option value="helsinki-airport">Helsinki Airport</option>
+                            <option value="oulu-train-station">Oulu Train Station</option>
+                            <option value="helsinki-train-station">Helsinki Train Station</option>
+                            <option value="tampere-train-station">Tampere Train Station</option>
                         </select></label>
                     <br>
                     <label for="name">Full Name:</label>
