--- a/task-k/index.html
+++ b/task-k/index.html
@@ -51,6 +51,7 @@
                     <label>Return Date: <input type="date" id="returnDate" name="returnDate" required></label>
                     <br>
                     <label>Return Location: <select id="returnLocation" name="returnLocation" required>
+                            <option value="" disabled selected>Select return location</option>
                             <option value="helsinki-airport">Helsinki Airport</option>
                             <option value="oulu-train-station">Oulu Train Station</option>
                             <option value="helsinki-train-station">Helsinki Train Station</option>
